:bug: z-index fixes

--- a/src/Views/ErrorView/ErrorView.scss
+++ b/src/Views/ErrorView/ErrorView.scss
@@ -13,7 +13,6 @@
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
-      z-index: 2;
 
       &__Intro {
         font-size: clamp(1rem, 2.5vw, 3em);
